# terminal-reader

./: README.md  pyproject.toml
tty_reader/: app.py  bookmarks.py  disguises.py  reader.py  text_utils.py
tty_reader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tty_reader/screens/: boss.py  help.py  picker.py
tty_reader/styles/: app.tcss
